2007-03-19  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/obconversion.cpp: Amend yesterday's change to address double
	free() bug, PR#1683541. Still don't like this, as it could leak
	the zip_istream we create.

	* src/parsmart.cpp: Fix PR#1683890 for SMARTS pattern 'x' with no
	number. Default is "at least one ring bond."

	* test/files/smartstest.txt, test/files/smartsresults.txt: Update
	for above. 'x' pattern and 'x0' pattern.

2007-03-19  Donald E. Curtis <dcurtis3@sourceforge.net>

	* src/mol.cpp: OBMol::DeleteAtom - Moved DeleteAtom to *after* the
	EndModify call.  At this point the atom is already removed from the _vatom
	vector.  OBMol::DeleteBond - Moved DeleteBond to *after* the EndModify
	call.  At this point the bond is already removed from the _vbond vector.

2007-03-18 Chris Morley

	* src/formats/mdlformat.cpp: Added support for atom aliases when
	reading. It's not much described in the main MDL specification,
	so this implementation is just adequate to handle the InChI
	samples, where for some reason, this antiquated feature is
	used in several molecules.
	
	* src/formats/inchiformat.cpp(ReadMolecule): Now reads implicit
	H isotopes.
	(WriteMolecule): rewrote option to not display routine warnings.
	
	* test/: Added inchiwrite.cpp, two NIST sample molecule sets and
	annotated results sets.
	
	* src/formats/getinchi.cpp: Added declaration of GetInChI().
	
	* src/canon.cpp (FixCisTransBonds): changed | to || in if statement
	
	* src/forcefield (GenerateCoordinates): initialize torang to 0,
	to avoid compiler warning. This variable doesn't seem to be
	doing much but please could somebody check this is ok.
	
2007-03-18  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/mol.cpp (Separate): Add support for copying, updating
	OBChiralData. Fixes PR#1680730.

	* src/obutil.cpp: Fix typo in yesterday's change.

	* test/logp_psa.cpp: Update to output predicted values, even if
	they match.
